--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ Changelog = "https://github.com/foarsitter/checkedid-python-client/releases"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-click = ">=8.0.1"
 pydantic = "^1.10.2"
 httpx = "^0.23.1"
 
@@ -52,6 +51,9 @@ myst-parser = {version = ">=0.16.1"}
 
 [tool.poetry.scripts]
 checkedid-python-client = "checkedid.__main__:main"
+
+[tool.poetry.group.dev-dependencies.dependencies]
+respx = "^0.20.1"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
