--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,12 +48,12 @@ sphinx-click = ">=3.0.2"
 typeguard = ">=2.13.3"
 xdoctest = {extras = ["colors"], version = ">=0.15.10"}
 myst-parser = {version = ">=0.16.1"}
+respx = "^0.20.1"
 
 [tool.poetry.scripts]
 checkedid-python-client = "checkedid.__main__:main"
 
-[tool.poetry.group.dev-dependencies.dependencies]
-respx = "^0.20.1"
+[tool.poetry.group.dev.dependencies]
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
