--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "checkedid-python-client"
+name = "checkedid"
 version = "0.1.3"
 description = "CheckedID Python API client"
 authors = ["Jelmer Draaijer <jelmer.draaijer@dok.works.nl>"]
