--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ typeguard = ">=2.13.3"
 xdoctest = {extras = ["colors"], version = ">=0.15.10"}
 myst-parser = {version = ">=0.16.1"}
 respx = "^0.20.1"
+pytest-asyncio = "^0.20.3"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
