--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,15 +19,14 @@ classifiers = [
 Changelog = "https://github.com/foarsitter/checkedid-api-python-client/releases"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-pydantic = "^1.10.2"
+python = ">3.8"
+pydantic = "^2.0.1"
 httpx = "^0.23.1"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
 black = ">=21.10b0"
 coverage = {extras = ["toml"], version = ">=6.2"}
-darglint = ">=1.8.1"
 flake8 = ">=4.0.1"
 flake8-bandit = ">=2.1.2"
 flake8-bugbear = ">=21.9.2"
